auth-service/src/main/java/com/example/auth/web/error/RefreshTokenInvalidException.java
package com.example.auth.web.error;

public class RefreshTokenInvalidException extends RuntimeException {
    public RefreshTokenInvalidException() { super("invalid_refresh_token"); }
}
